--- a/numpy_and_matrix.ipynb
+++ b/numpy_and_matrix.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMn7yYWcQUgc1pSohaCNDYY",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hajing09-dev/numpy_and_matrix/blob/main/numpy_and_matrix.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,21 +12,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "온라인 코드 실행기에 오신것을 환영합니다!"
-      ],
       "metadata": {
         "id": "tyY14vgYiT-R"
-      }
+      },
+      "source": [
+        "온라인 코드 실행기에 오신것을 환영합니다!"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "⬇ 아래의 실행 버튼을 눌러 코드를 실행할수 있습니다."
-      ],
       "metadata": {
         "id": "NHeq1pzhiipT"
-      }
+      },
+      "source": [
+        "⬇ 아래의 실행 버튼을 눌러 코드를 실행할수 있습니다."
+      ]
     },
     {
       "cell_type": "code",
@@ -52,12 +36,28 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np #\n",
+        "import numpy as np #Numpy를 사용하기 위해 불러오는 과정\n",
         "\n",
         "array1 = np.array([[1,2,3,4],[5,6,7,8]])\n",
         "\n",
         "print(array1)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMn7yYWcQUgc1pSohaCNDYY",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
