--- a/numpy_and_matrix.ipynb
+++ b/numpy_and_matrix.ipynb
@@ -1,63 +1,457 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hajing09-dev/numpy_and_matrix/blob/main/numpy_and_matrix.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tyY14vgYiT-R"
-      },
-      "source": [
-        "온라인 코드 실행기에 오신것을 환영합니다!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NHeq1pzhiipT"
-      },
-      "source": [
-        "⬇ 아래의 실행 버튼을 눌러 코드를 실행할수 있습니다."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "waRMJ3m1h9gL"
-      },
-      "outputs": [],
-      "source": [
-        "import numpy as np #Numpy를 사용하기 위해 불러오는 과정\n",
-        "\n",
-        "array1 = np.array([[1,2,3,4],[5,6,7,8]])\n",
-        "\n",
-        "print(array1)"
-      ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyMn7yYWcQUgc1pSohaCNDYY",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "tyY14vgYiT-R"
+   },
+   "source": [
+    "온라인 코드 실행기에 오신것을 환영합니다!"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "NHeq1pzhiipT"
+   },
+   "source": [
+    "⬇ 아래의 실행 버튼을 눌러 코드를 실행할수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "AnIjpUEzBJ-Q",
+    "outputId": "235b703c-c0b6-4e77-fe57-fcc8270c48b9"
+   },
+   "outputs": [],
+   "source": [
+    "# 기본적인 numpy 코드\n",
+    "import numpy as np\n",
+    "\n",
+    "# 행렬 만들기(여기서 수를 변경하면 결과가 바뀌지만 덧셈, 곱셈할때 필요한 규칙은 지켜서 넣어주세요)\n",
+    "A = np.array([[1, 2], [3, 4]])\n",
+    "B = np.array([[1, 0], [0, 1]])  # 단위 행렬\n",
+    "\n",
+    "# 결과 계산해서 변수에 저장\n",
+    "add_result = A + B          # 행렬 덧셈\n",
+    "sub_result = A - B          # 행렬 뺄셈\n",
+    "dot_result = A @ B          # 행렬 곱셈\n",
+    "\n",
+    "# 출력\n",
+    "print(\"행렬 A:\")\n",
+    "print(A)\n",
+    "\n",
+    "print(\"\\n행렬 B (단위행렬):\")\n",
+    "print(B)\n",
+    "\n",
+    "print(\"\\nA + B (행렬의 덧셈):\")\n",
+    "print(add_result)\n",
+    "\n",
+    "print(\"\\nA - B (행렬의 뺄셈):\")\n",
+    "print(sub_result)\n",
+    "\n",
+    "print(\"\\nA @ B (행렬의 곱셈):\")\n",
+    "print(dot_result)\n",
+    "\n",
+    "\n",
+    "# A의 행과 열의 개수 확인\n",
+    "print(\"\\nA의 행 개수:\", A.shape[0])\n",
+    "print(\"A의 열 개수:\", A.shape[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 189,
+     "referenced_widgets": [
+      "c7b1c7a0c6d245e6bdd4a8a68f6bea8e",
+      "543cc8dc76f84655a96bc0af897b4c13",
+      "a2d7eb0e041e42fcbe920033729af583",
+      "ccb6f4687a304227a96e97b3eaa4fa1a",
+      "39cd2506b2114872bec9910a90547556",
+      "a25e3f2cdde046c5b173e9ee518f9550",
+      "d2b8d777f70045d48d3468663bd80dd5",
+      "5cbe628ec5224e2882682fc80f0f1276"
+     ]
+    },
+    "id": "waRMJ3m1h9gL",
+    "outputId": "6a4c8a9d-8600-420d-f057-7ae08457d9b0"
+   },
+   "outputs": [],
+   "source": [
+    "#행렬을 입력받아 행과 열의 수를 알려주는 코드입니다.\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "import numpy as np\n",
+    "\n",
+    "matrix_input = widgets.Textarea(\n",
+    "    value='',\n",
+    "    placeholder='예: 1,2,3\\n4,5,6\\n7,8,9',\n",
+    "    description='행렬 입력:',\n",
+    "    layout=widgets.Layout(width='50%', height='100px')\n",
+    ")\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "def parse_matrix_with_numpy(text):\n",
+    "    try:\n",
+    "        # 줄바꿈으로 행 분리 후 쉼표로 열 분리해서 리스트로 만듦\n",
+    "        rows = text.strip().split('\\n')\n",
+    "        data = [list(map(float, row.split(','))) for row in rows]\n",
+    "        arr = np.array(data)\n",
+    "\n",
+    "        # numpy array가 2차원이 아니면 오류 처리\n",
+    "        if arr.ndim != 2:\n",
+    "            return None, \"2차원 행렬 형식으로 입력해주세요.\"\n",
+    "        return arr, None\n",
+    "    except Exception:\n",
+    "        return None, \"입력 형식 오류: 숫자를 쉼표로 구분하고 줄바꿈으로 행을 나누세요.\"\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    with output:\n",
+    "        clear_output()\n",
+    "        matrix_text = matrix_input.value\n",
+    "        arr, error = parse_matrix_with_numpy(matrix_text)\n",
+    "        if error:\n",
+    "            print(\"오류:\", error)\n",
+    "        else:\n",
+    "            print(f\"입력한 행렬의 행 개수: {arr.shape[0]}\")\n",
+    "            print(f\"입력한 행렬의 열 개수: {arr.shape[1]}\")\n",
+    "\n",
+    "button = widgets.Button(description=\"행렬 정보 확인\")\n",
+    "button.on_click(on_button_clicked)\n",
+    "\n",
+    "display(matrix_input, button, output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 251,
+     "referenced_widgets": [
+      "df3214b82e5645b89a712f965c292615",
+      "2bc7a4ea17144bb38102849cbb73e140",
+      "f0fc704f008b41039a696e002b464cae",
+      "51d50b3415cb4d02a721e9e9b9c89223",
+      "a886af4587644cba88a357e9a9a7f64f",
+      "99f470a8b540482e9644f7e50ebac116",
+      "cc5b5ad4ea3349289d59cc32b5aedd17",
+      "d18ac8d0e0cd49a8b549d9d73e87d674",
+      "0fa5b14967294feb901e680bf3a89a90",
+      "085ae5e5f7c94b03964e16f9453d2549",
+      "64e96f1a31b34a1e94ecf24d46b62062",
+      "ea022cca460546608dccd8ac977e8e7d",
+      "f65c350fee1d4495b4762f8777d53b4b",
+      "21af31cbe0544cb8b177d3ca5cfb43b3",
+      "ccd06d19658e4a5ea704af47d48e7a56",
+      "d86e3a9560be4d8aa74e5278148f6ba5",
+      "043e614f78254ce49ceb8b61ab4bfbdb",
+      "2879b93ed8224c18b2e3a7757ad9a586",
+      "b7c3b4c22c65495996f015181c475af4",
+      "56bbc3a075304ef589b1a514d8e7238a",
+      "0774699fd32f4ba0969348a99e9eb50d",
+      "09238089c6344116b2705caab2f1ab84",
+      "1d123127e58d4f2fb6c2628aa37fd350",
+      "e1649ab6d550401a8cb817c9e791a079",
+      "4f1d0cd4201644cfb5d18893a1bc9d7f",
+      "f594ac9f642548dfbfeaebe686510edd",
+      "2016e9ce1b9e4be7a67a0a084f4a87af",
+      "31a788cbb6644460b34295cf752cb6b8",
+      "638afca32365455aba8ea906bd7833d2",
+      "a95e1fce79db4a3a8d37557abdb83811",
+      "0445006cbd874737b080424a96264a14",
+      "740ee63d446b445eba50317b5c9be1e1",
+      "62b5941cb4da4668afea218a0a623c1b",
+      "09cc642729c24c1eb42f20cf6cccb3bd",
+      "461d7a9fa0ea44fd92424a535fccaf9e",
+      "82d7964a786a44bb9af3a143875005de",
+      "bd7906da690e4b51800dc6dfa14ff3f8",
+      "02553cc67d604c568abd236fc709e21e",
+      "4c5d7c76ac1447dd98699cd4cbb41a64",
+      "fb05c890c5284d409e6c7556321dc47d",
+      "292a3b7fcd7e47e9bf4e3b7326c6ddcc",
+      "2b059adc0e284103870784ac871dbfdc",
+      "2362db4b685f45b2bd0d13f004d7c643",
+      "eea9717978864a929bb5058516e4a3aa",
+      "931d09acd229441995715ccd840e2dda",
+      "8ac8859c34884a2ba3b4c0f999b8bdd1",
+      "b40b7260123048d6b8e9222b2ef9d10b",
+      "ec14c47c2d6a43529c5983c981cc3421",
+      "b13057aa0bda4a2fb4eb0d56bad8edd5",
+      "561abdd93eda4edf80537f33d3fd58d0",
+      "234c85de188347baac34d94cb06c2ac1",
+      "e803cf4765b6466eae355b71c7346879",
+      "3f219fbf733e4d339e44d0fef45959c5",
+      "08cbbf9fb33c4e18961b75e26feff7d6",
+      "f096ec8e78e741e391f1e3ca299b9888",
+      "61eb8001206d45ebb1a7dba64865715b",
+      "fcf1082bb59641a88fd1be41a7d7cece",
+      "8339eb518e2745de8c5df4ae8304b338",
+      "233aa7c12e0249e396c1d4d22850de7c",
+      "b4a7d5762d3a4359869231f3c1847ed0",
+      "241ec0302b7341b68047092b498f1fb8",
+      "9a7ea76c172e477785164a566dd44a83",
+      "5cd3977b772c4a73adcd62dee41584c8",
+      "9e7f850579764434a3c3c650ac702796",
+      "303d260a9bed49bfab7447c00291c175",
+      "4aab4e0fee5a459ca11493c866db3eb3",
+      "d2b13723dc364cd49a73cc2daaa9229b",
+      "ebc009ab1e734093b88e5da2acb53da1",
+      "97129fe14fd94751abed1e6f6fbefcff",
+      "0db25a7063ee4ff5867be256cf381de7",
+      "d98cae93dc8f46d4876ee5c0f4445395",
+      "f8e15c0e46714fd0bd7739ac0fc0480a",
+      "7d3c853eea264a07ab2a7c4a7fc93ada",
+      "ab33d55e3d4d439f853252cc900651d2",
+      "b790748603f644c7b321aef85468ab33",
+      "88ca42213fd04aadbb5152c0115992f4",
+      "802502cd78e24789a9f4ae5e610a5a37",
+      "70eb939db10f435c80e726eb5e49a4b0",
+      "cbb6504d31234cbbbb2ea241b1379aeb",
+      "f61e05c945c54f97bc6bf19a830ec75a",
+      "5823f8c8292d4198b0c087a4c8f4a894",
+      "0fbcd5e75d1f476e80f80ac1bbe7fe22",
+      "e292721dc23d4ac28587874a147f944c",
+      "1ed523302d554ddc800c6279ae09173d",
+      "f06d8967ff4d46a7abbed89415d39770",
+      "f1a4ab0bc6dc4f4591cd327093c694c7",
+      "a09117a77d5c44ecb693281704192f17",
+      "43cfbbdaf2e1487b88bcb773a5be0e90",
+      "d4998a76c0ef4921920bf8a219d9314b",
+      "b72a2bc5196d4cdc82588ecfc5bcccc9",
+      "1c49d1c4c3c645d3b38bc7ec897ec19f",
+      "89557708ab11448cacd927622d6da259",
+      "319a3a109a084f7497536b85dbcdb5de",
+      "dd9e50a63330478681c82ad90a6e4a6e",
+      "6d347a0a91ab43b9bf6ee1408e494620",
+      "fce5177a8bf3471e825e0ef6e3e332a9",
+      "e0e1c0f5c1b242b5afd30d2e40855ef7",
+      "92a1cd68b2614aa2a0cb20656607e471",
+      "f33bcb78721844139999d585c07af3b0",
+      "bc45d1444e4f4c03a08f680d17f69d40",
+      "c5b4f7c7c6014b619e300dfc9a647f7b",
+      "16fc28e38f3546c791e5a5ff94bc0a19",
+      "6eb8b321adc9492ab09bf65556dc4e53",
+      "578d39049e2c496ab77c64a7bb0b3678",
+      "3c739d1dc8134268a6d617226a972fc4",
+      "b31feac446154a928e7b13a791788527",
+      "c491da6a5eca4521ab922a74dae2a873",
+      "d398dbdd337a448a85720b3a4ff37be2",
+      "802ea4388fb54a4d9d8f8697193a0ed2",
+      "be6d87608eb849ac8ecedecb930b1a2b",
+      "d20f772d660343cf9c7858b607b337ae",
+      "2acefd423a7b4e9d8ccbfaaca09bf3f4",
+      "54328a39dd8e432c9612673fd0ccdd07",
+      "f3409fc9d0f84990a61a208843a9c4f6",
+      "8059aaca31e34e47b082e3d7bcd3b04e",
+      "8141d6e25546424185590b892d5e8ed0",
+      "8d534d552a604b799cda73915fbcec48",
+      "b1300fa2f872451281a2da1462b8bfb0",
+      "4918c9de2a774ad8ad9de059c08cf92a",
+      "b3dcccb675d049b79a2fe4a72d535715",
+      "1c12f9799bd34b62877f1e13c08b615f",
+      "02286db6a38e4890b54b6849f4f7d345",
+      "a30617e2947646128b408e2d780976c5",
+      "c498582742b247c78df0127be9da6dc6",
+      "eb3135b876df40d998aa35c94785bae3",
+      "68424ed1b69840418d775532fe4f8edf",
+      "3d86293c59584076984fe45bffff8521",
+      "366dfd9d9e14497daf2bbcb3ac72a27a",
+      "ff88f0e278bf4affad341cc8eaa293b4",
+      "8a908e0d8a734961b084ce563dc0bf43",
+      "9a806b97ed5840bda6e47c1432c6a481",
+      "ba69878008924a808f4333b51192e200",
+      "2ef7ac6513d2417dbc38f162db8961a8",
+      "eca46b7738ed4ce582623b07076e57da",
+      "a730ec4dd3584bf6a92b1f9563679f61",
+      "b875426053e047ff96622eaf9faecc05"
+     ]
+    },
+    "id": "R30bDd0G0MbT",
+    "outputId": "f61f8439-f8b4-4cef-8c0a-2cc6bf09b082"
+   },
+   "outputs": [],
+   "source": [
+    "#행렬 계산기\n",
+    "\n",
+    "import numpy as np\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
+    "\n",
+    "out = widgets.Output()\n",
+    "\n",
+    "def input_screen(prev_A=None, prev_B=None,\n",
+    "                 prev_rows_a=2, prev_cols_a=2,\n",
+    "                 prev_rows_b=2, prev_cols_b=2):\n",
+    "    clear_output()\n",
+    "    out.clear_output()  # 에러 메시지 초기화\n",
+    "\n",
+    "    rows_a_input = widgets.BoundedIntText(value=prev_rows_a, min=1, max=10, description='A 행:', layout=widgets.Layout(width='150px'))\n",
+    "    cols_a_input = widgets.BoundedIntText(value=prev_cols_a, min=1, max=10, description='A 열:', layout=widgets.Layout(width='150px'))\n",
+    "    rows_b_input = widgets.BoundedIntText(value=prev_rows_b, min=1, max=10, description='B 행:', layout=widgets.Layout(width='150px'))\n",
+    "    cols_b_input = widgets.BoundedIntText(value=prev_cols_b, min=1, max=10, description='B 열:', layout=widgets.Layout(width='150px'))\n",
+    "\n",
+    "    btn_next = widgets.Button(description='다음')\n",
+    "\n",
+    "    def on_next_clicked(b):\n",
+    "        r_a, c_a = rows_a_input.value, cols_a_input.value\n",
+    "        r_b, c_b = rows_b_input.value, cols_b_input.value\n",
+    "\n",
+    "        if c_a != r_b:\n",
+    "            with out:\n",
+    "                clear_output()\n",
+    "                print(\"행렬 곱을 위해 A의 열과 B의 행 크기가 같아야 합니다.\")\n",
+    "            return\n",
+    "\n",
+    "        input_matrix_screen(r_a, c_a, r_b, c_b, prev_A, prev_B)\n",
+    "\n",
+    "    btn_next.on_click(on_next_clicked)\n",
+    "\n",
+    "    box = widgets.VBox([rows_a_input, cols_a_input, rows_b_input, cols_b_input, btn_next, out])\n",
+    "    display(box)\n",
+    "\n",
+    "def input_matrix_screen(r_a, c_a, r_b, c_b, prev_A=None, prev_B=None):\n",
+    "    clear_output()\n",
+    "    out.clear_output()\n",
+    "\n",
+    "    A_inputs = []\n",
+    "    B_inputs = []\n",
+    "\n",
+    "    def create_matrix_widgets(rows, cols, prev_values):\n",
+    "        inputs = []\n",
+    "        for i in range(rows):\n",
+    "            row_widgets = []\n",
+    "            for j in range(cols):\n",
+    "                val = ''\n",
+    "                if prev_values is not None:\n",
+    "                    try:\n",
+    "                        val = str(prev_values[i][j])\n",
+    "                    except:\n",
+    "                        pass\n",
+    "                w = widgets.Text(value=val, layout=widgets.Layout(width='40px'))\n",
+    "                row_widgets.append(w)\n",
+    "            inputs.append(row_widgets)\n",
+    "        return inputs\n",
+    "\n",
+    "    A_inputs = create_matrix_widgets(r_a, c_a, prev_A)\n",
+    "    B_inputs = create_matrix_widgets(r_b, c_b, prev_B)\n",
+    "\n",
+    "    def matrix_widget_to_array(matrix_widgets):\n",
+    "        rows = len(matrix_widgets)\n",
+    "        cols = len(matrix_widgets[0]) if rows > 0 else 0\n",
+    "        arr = np.zeros((rows, cols), dtype=float)\n",
+    "        for i in range(rows):\n",
+    "            for j in range(cols):\n",
+    "                try:\n",
+    "                    arr[i, j] = float(matrix_widgets[i][j].value)\n",
+    "                except:\n",
+    "                    arr[i, j] = 0\n",
+    "        return arr\n",
+    "\n",
+    "    btn_add = widgets.Button(description='덧셈 (A + B)')\n",
+    "    btn_sub = widgets.Button(description='뺄셈 (A - B)')\n",
+    "    btn_mul = widgets.Button(description='곱셈 (A x B)')\n",
+    "    btn_prev = widgets.Button(description='이전')\n",
+    "\n",
+    "    output_calc = widgets.Output()\n",
+    "\n",
+    "    def on_add_clicked(b):\n",
+    "        output_calc.clear_output()\n",
+    "        A = matrix_widget_to_array(A_inputs)\n",
+    "        B = matrix_widget_to_array(B_inputs)\n",
+    "        with output_calc:\n",
+    "            clear_output()\n",
+    "            if A.shape == B.shape:\n",
+    "                print(\"A + B =\\n\", A + B)\n",
+    "            else:\n",
+    "                print(\"덧셈 불가능 (행렬 크기 불일치)\")\n",
+    "\n",
+    "    def on_sub_clicked(b):\n",
+    "        output_calc.clear_output()\n",
+    "        A = matrix_widget_to_array(A_inputs)\n",
+    "        B = matrix_widget_to_array(B_inputs)\n",
+    "        with output_calc:\n",
+    "            clear_output()\n",
+    "            if A.shape == B.shape:\n",
+    "                print(\"A - B =\\n\", A - B)\n",
+    "            else:\n",
+    "                print(\"뺄셈 불가능 (행렬 크기 불일치)\")\n",
+    "\n",
+    "    def on_mul_clicked(b):\n",
+    "        output_calc.clear_output()\n",
+    "        A = matrix_widget_to_array(A_inputs)\n",
+    "        B = matrix_widget_to_array(B_inputs)\n",
+    "        with output_calc:\n",
+    "            clear_output()\n",
+    "            if A.shape[1] == B.shape[0]:\n",
+    "                print(\"A x B =\\n\", A @ B)\n",
+    "            else:\n",
+    "                print(\"곱셈 불가능 (A의 열 수와 B의 행 수 불일치)\")\n",
+    "\n",
+    "    def on_prev_clicked(b):\n",
+    "        prev_A = matrix_widget_to_array(A_inputs).tolist()\n",
+    "        prev_B = matrix_widget_to_array(B_inputs).tolist()\n",
+    "        input_screen(\n",
+    "            prev_A=prev_A, prev_B=prev_B,\n",
+    "            prev_rows_a=r_a, prev_cols_a=c_a,\n",
+    "            prev_rows_b=r_b, prev_cols_b=c_b\n",
+    "        )\n",
+    "\n",
+    "    btn_add.on_click(on_add_clicked)\n",
+    "    btn_sub.on_click(on_sub_clicked)\n",
+    "    btn_mul.on_click(on_mul_clicked)\n",
+    "    btn_prev.on_click(on_prev_clicked)\n",
+    "\n",
+    "    A_grid = widgets.GridBox(\n",
+    "        [item for row in A_inputs for item in row],\n",
+    "        layout=widgets.Layout(\n",
+    "            grid_template_columns=\" \".join([\"40px\"]*c_a),\n",
+    "            grid_gap=\"5px\"\n",
+    "        )\n",
+    "    )\n",
+    "    B_grid = widgets.GridBox(\n",
+    "        [item for row in B_inputs for item in row],\n",
+    "        layout=widgets.Layout(\n",
+    "            grid_template_columns=\" \".join([\"40px\"]*c_b),\n",
+    "            grid_gap=\"5px\"\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    display(widgets.HTML(value=\"<b>A 행렬 입력</b>\"))\n",
+    "    display(A_grid)\n",
+    "    display(widgets.HTML(value=\"<b>B 행렬 입력</b>\"))\n",
+    "    display(B_grid)\n",
+    "    display(widgets.HBox([btn_add, btn_sub, btn_mul, btn_prev]))\n",
+    "    display(output_calc)\n",
+    "\n",
+    "input_screen()\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
